feat: v2 팀 조회수 및 푸시알림 로직 추가